# Console-Calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
.cache/clangd/index/: ClassFloat.h.FCEFA73521E4538D.idx  absolute.cpp.614EF1970CCFDAE6.idx  calculate.cpp.5BF5C5257D4DF608.idx  calculate.h.DFD1A31B5CA71318.idx  compare.cpp.5BCE83B9D2B0B730.idx  divide.cpp.535F75D09D30A16B.idx  divide.h.557E54F671D87885.idx  format.cpp.AA964160F10C426E.idx  init.cpp.BCA1718694A2183E.idx  main.cpp.45BEF2C66D10D272.idx  operation.cpp.BCA7003DC552BB4C.idx  print.cpp.5495A35A69E3B4E6.idx  test.cpp.AB1332060C28BAA6.idx  tryParse.cpp.56871E6C7E0361AD.idx  tryParse.h.2D225E24FA993054.idx
include/: ClassFloat.h  calculate.h  divide.h  tryParse.h  usrInteraction.h
src/: main.cpp
src/ClassFloat/: absolute.cpp  compare.cpp  divide.cpp  format.cpp  init.cpp  operation.cpp  print.cpp
src/console/: calculate.cpp  tryParse.cpp  usrInteraction.cpp
tests/: debug.cpp  g-test.cpp  test-case.txt  test.cpp
